coordinates addition for addresses

--- a/file-preprocessing-notebook.ipynb
+++ b/file-preprocessing-notebook.ipynb
@@ -22,36 +22,37 @@
    "id": "d1f5c3e7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:50.175201Z",
-     "start_time": "2024-11-16T21:58:50.171019Z"
+     "end_time": "2024-11-26T16:57:35.328810Z",
+     "start_time": "2024-11-26T16:57:35.068364Z"
     }
    },
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "8e0233f9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:50.242006Z",
-     "start_time": "2024-11-16T21:58:50.227074Z"
+     "end_time": "2024-11-26T16:57:35.346303Z",
+     "start_time": "2024-11-26T16:57:35.332612Z"
     }
    },
    "source": "df = pd.read_csv('mapstr.csv')",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "04a9db80",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:50.334460Z",
-     "start_time": "2024-11-16T21:58:50.306209Z"
+     "end_time": "2024-11-26T16:57:35.401582Z",
+     "start_time": "2024-11-26T16:57:35.394596Z"
     }
    },
    "source": "df",
@@ -234,12 +235,12 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -254,47 +255,34 @@
    "id": "0334d30f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:50.587849Z",
-     "start_time": "2024-11-16T21:58:50.580391Z"
+     "end_time": "2024-11-26T16:57:35.498901Z",
+     "start_time": "2024-11-26T16:57:35.496258Z"
     }
    },
    "source": "privateless_df = df[~df['tags'].str.contains(\"Private\")]",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "cdb8f8b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:50.723008Z",
-     "start_time": "2024-11-16T21:58:50.714599Z"
+     "end_time": "2024-11-26T16:57:35.543607Z",
+     "start_time": "2024-11-26T16:57:35.540373Z"
     }
    },
-   "source": "privateless_df['userComment'] = privateless_df['userComment'].fillna(\"\")",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_23220/320634188.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  privateless_df['userComment'] = privateless_df['userComment'].fillna(\"\")\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "source": "privateless_df.loc[:,'userComment'] = privateless_df['userComment'].fillna(\"\")",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "id": "ab27f64d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:50.876029Z",
-     "start_time": "2024-11-16T21:58:50.861049Z"
+     "end_time": "2024-11-26T16:57:35.587126Z",
+     "start_time": "2024-11-26T16:57:35.581422Z"
     }
    },
    "source": "privateless_df",
@@ -477,46 +465,46 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "9e379ddc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:51.088130Z",
-     "start_time": "2024-11-16T21:58:51.074941Z"
+     "end_time": "2024-11-26T16:57:35.651466Z",
+     "start_time": "2024-11-26T16:57:35.649137Z"
     }
    },
    "source": "privateless_df = privateless_df.iloc[::-1]",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "c6847ee9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:51.231583Z",
-     "start_time": "2024-11-16T21:58:51.226473Z"
+     "end_time": "2024-11-26T16:57:35.700896Z",
+     "start_time": "2024-11-26T16:57:35.698468Z"
     }
    },
    "source": "privateless_df = privateless_df.reset_index(drop=True)",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "c0691c8e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:51.316689Z",
-     "start_time": "2024-11-16T21:58:51.302719Z"
+     "end_time": "2024-11-26T16:57:35.765372Z",
+     "start_time": "2024-11-26T16:57:35.759422Z"
     }
    },
    "source": "privateless_df",
@@ -699,12 +687,12 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -721,15 +709,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:51.550039Z",
-     "start_time": "2024-11-16T21:58:51.542708Z"
+     "end_time": "2024-11-26T16:57:35.824977Z",
+     "start_time": "2024-11-26T16:57:35.822327Z"
     }
    },
    "cell_type": "code",
    "source": "df_tags_columns = privateless_df['tags'].str.split('#', expand=True)",
    "id": "b7a9f95bc790152c",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -740,21 +728,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:51.684585Z",
-     "start_time": "2024-11-16T21:58:51.678955Z"
+     "end_time": "2024-11-26T16:57:35.869438Z",
+     "start_time": "2024-11-26T16:57:35.866963Z"
     }
    },
    "cell_type": "code",
    "source": "df_tags_columns.columns = [f'tag{i+1}' for i in range(df_tags_columns.shape[1])]",
    "id": "1c4bdedbeeff2f5c",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:51.882443Z",
-     "start_time": "2024-11-16T21:58:51.856383Z"
+     "end_time": "2024-11-26T16:57:35.932030Z",
+     "start_time": "2024-11-26T16:57:35.925295Z"
     }
    },
    "cell_type": "code",
@@ -924,12 +912,12 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -940,28 +928,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.176845Z",
-     "start_time": "2024-11-16T21:58:52.170204Z"
+     "end_time": "2024-11-26T16:57:36.015939Z",
+     "start_time": "2024-11-26T16:57:36.013573Z"
     }
    },
    "cell_type": "code",
    "source": "privateless_df = pd.concat([privateless_df, df_tags_columns], axis=1)",
    "id": "49868dda85dfdaa3",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.233454Z",
-     "start_time": "2024-11-16T21:58:52.225352Z"
+     "end_time": "2024-11-26T16:57:36.058630Z",
+     "start_time": "2024-11-26T16:57:36.055871Z"
     }
    },
    "cell_type": "code",
    "source": "privateless_df = privateless_df.drop(\"tags\", axis=1)",
    "id": "9e39133e940b6513",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -972,28 +960,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.390252Z",
-     "start_time": "2024-11-16T21:58:52.381820Z"
+     "end_time": "2024-11-26T16:57:36.140141Z",
+     "start_time": "2024-11-26T16:57:36.136432Z"
     }
    },
    "cell_type": "code",
    "source": "adr_df = privateless_df['address'].str.split(',', expand=True)",
    "id": "ba1301c3842bd082",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.501418Z",
-     "start_time": "2024-11-16T21:58:52.496243Z"
+     "end_time": "2024-11-26T16:57:36.180742Z",
+     "start_time": "2024-11-26T16:57:36.178360Z"
     }
    },
    "cell_type": "code",
    "source": "adr_df.columns = [f'adr{i+1}' for i in range(adr_df.shape[1])]",
    "id": "86d3f83feb591e9f",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -1004,47 +992,47 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.617688Z",
-     "start_time": "2024-11-16T21:58:52.610632Z"
+     "end_time": "2024-11-26T16:57:36.231034Z",
+     "start_time": "2024-11-26T16:57:36.227809Z"
     }
    },
    "cell_type": "code",
    "source": "df_pc = adr_df[\"adr2\"].str.split(' ', expand=True)",
    "id": "c1d65aa69b630375",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.681438Z",
-     "start_time": "2024-11-16T21:58:52.673417Z"
+     "end_time": "2024-11-26T16:57:36.276511Z",
+     "start_time": "2024-11-26T16:57:36.274260Z"
     }
    },
    "cell_type": "code",
    "source": "df_pc.columns = [f'cp{i+1}' for i in range(df_pc.shape[1])]",
    "id": "2bbc6079a75ee7fd",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.746695Z",
-     "start_time": "2024-11-16T21:58:52.741103Z"
+     "end_time": "2024-11-26T16:57:36.322583Z",
+     "start_time": "2024-11-26T16:57:36.319605Z"
     }
    },
    "cell_type": "code",
    "source": "df_pc = df_pc[[\"cp2\",\"cp3\"]]",
    "id": "89b18acd5dba0104",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.804223Z",
-     "start_time": "2024-11-16T21:58:52.798977Z"
+     "end_time": "2024-11-26T16:57:36.370041Z",
+     "start_time": "2024-11-26T16:57:36.367475Z"
     }
    },
    "cell_type": "code",
@@ -1059,7 +1047,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -1070,21 +1058,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.887593Z",
-     "start_time": "2024-11-16T21:58:52.880177Z"
+     "end_time": "2024-11-26T16:57:36.417704Z",
+     "start_time": "2024-11-26T16:57:36.414845Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.concat([privateless_df,adr_df, df_pc], axis=1)",
    "id": "a0be2466dc10a985",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:52.965467Z",
-     "start_time": "2024-11-16T21:58:52.933394Z"
+     "end_time": "2024-11-26T16:57:36.472458Z",
+     "start_time": "2024-11-26T16:57:36.462993Z"
     }
    },
    "cell_type": "code",
@@ -1463,12 +1451,12 @@
        "</div>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -1479,15 +1467,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:53.093106Z",
-     "start_time": "2024-11-16T21:58:53.087151Z"
+     "end_time": "2024-11-26T16:57:36.540790Z",
+     "start_time": "2024-11-26T16:57:36.538643Z"
     }
    },
    "cell_type": "code",
    "source": "df = df.drop(columns=['address','adr2','adr4','adr5','adr6'],axis=1)",
    "id": "99036691c2e2df66",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -1498,15 +1486,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:53.150028Z",
-     "start_time": "2024-11-16T21:58:53.142249Z"
+     "end_time": "2024-11-26T16:57:36.584088Z",
+     "start_time": "2024-11-26T16:57:36.581036Z"
     }
    },
    "cell_type": "code",
    "source": "df = df.rename(columns={'adr1':'address', 'adr3':'country', 'cp2':'postalCode', 'cp3':'city'})",
    "id": "741bb55fbe42d45d",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -1517,68 +1505,194 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:53.329129Z",
-     "start_time": "2024-11-16T21:58:53.319424Z"
+     "end_time": "2024-11-26T16:57:36.625132Z",
+     "start_time": "2024-11-26T16:57:36.622175Z"
     }
    },
    "cell_type": "code",
    "source": "df = df[['name','address', 'city', 'postalCode', 'country', 'icon', 'userComment', 'tag1', 'tag2', 'tag3', 'tag4', 'tag5', 'tag6', 'tag7']]",
    "id": "55aeadfc2ae564c0",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 25
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Replacement of NaN and None values with \"\"",
+   "source": "## Merging dataframe with coordinates values contained in another file",
    "id": "c33948fd15bbdf0e"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:53.549745Z",
-     "start_time": "2024-11-16T21:58:53.541675Z"
+     "end_time": "2024-11-26T16:57:36.670602Z",
+     "start_time": "2024-11-26T16:57:36.664571Z"
     }
    },
    "cell_type": "code",
-   "source": "df = df.fillna(\"\")",
-   "id": "79b7357ca33dfeb6",
+   "source": "geo_js = json.load(open('mapstr.geojson'))",
+   "id": "f522d6e9ccb51a77",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:36.713135Z",
+     "start_time": "2024-11-26T16:57:36.711221Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "features = geo_js['features']",
+   "id": "b63526275641e758",
    "outputs": [],
    "execution_count": 27
   },
   {
-   "cell_type": "markdown",
-   "id": "9dfdf000",
-   "metadata": {},
-   "source": [
-    "## Final Step : Export of the preprocessed dataframe into csv and parquet formats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "9785884a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:53.649449Z",
-     "start_time": "2024-11-16T21:58:53.614531Z"
+     "end_time": "2024-11-26T16:57:36.758404Z",
+     "start_time": "2024-11-26T16:57:36.756393Z"
     }
    },
-   "source": "df.to_parquet('addresses-notebook.parquet')",
+   "cell_type": "code",
+   "source": "df_rows = []",
+   "id": "2e80956a398bb9aa",
    "outputs": [],
    "execution_count": 28
   },
   {
-   "cell_type": "code",
-   "id": "31ba76c8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T21:58:53.708214Z",
-     "start_time": "2024-11-16T21:58:53.689951Z"
+     "end_time": "2024-11-26T16:57:36.805976Z",
+     "start_time": "2024-11-26T16:57:36.801435Z"
     }
    },
-   "source": "df.to_csv('addresses-notebook.csv', index=False)",
+   "cell_type": "code",
+   "source": [
+    "for feature in features:\n",
+    "    properties = feature['properties']\n",
+    "    geometry = feature['geometry']\n",
+    "\n",
+    "    name = properties.get('name', '')\n",
+    "    address = properties.get('address', '')\n",
+    "    icon = properties.get('icon', '')\n",
+    "\n",
+    "    tags = [tag['name'] for tag in properties.get('tags', [])]\n",
+    "\n",
+    "    coordinates = geometry.get('coordinates', [])\n",
+    "\n",
+    "    df_row = {\n",
+    "        'name': name,\n",
+    "        'address': address,\n",
+    "        'icon': icon,\n",
+    "        'coordinates': coordinates\n",
+    "    }\n",
+    "\n",
+    "    for i, tag in enumerate(tags):\n",
+    "        df_row[f'tag{i + 1}'] = tag\n",
+    "\n",
+    "    df_rows.append(df_row)\n"
+   ],
+   "id": "256c11f929dcb034",
    "outputs": [],
    "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:36.852560Z",
+     "start_time": "2024-11-26T16:57:36.849454Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_geo = pd.DataFrame(df_rows)",
+   "id": "2c08b943c8a5a664",
+   "outputs": [],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:36.901258Z",
+     "start_time": "2024-11-26T16:57:36.896230Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = pd.read_csv('addresses-notebook.csv')",
+   "id": "3624677d99bcb60f",
+   "outputs": [],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:36.946848Z",
+     "start_time": "2024-11-26T16:57:36.942210Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_merged = pd.merge(df, df_geo, on='name', how='left')",
+   "id": "418dd5f9c081e52",
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:36.991734Z",
+     "start_time": "2024-11-26T16:57:36.988808Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_merged = df_merged.drop(columns=['address_y', 'icon_y', 'tag1_y', 'tag2_y', 'tag3_y', 'tag4_y', 'tag5_y', 'tag6_y', 'tag7_y'])",
+   "id": "edee683569902513",
+   "outputs": [],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:37.037426Z",
+     "start_time": "2024-11-26T16:57:37.035145Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_merged.columns = [column[:-2] if column.endswith('_x') else column for column in df_merged.columns]",
+   "id": "c7eda5ab9022d36",
+   "outputs": [],
+   "execution_count": 34
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Final Step : Export of the preprocessed dataframe into csv and parquet formats",
+   "id": "9dfdf000"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:37.112987Z",
+     "start_time": "2024-11-26T16:57:37.080998Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_merged.to_parquet('addresses-notebook.parquet')",
+   "id": "9785884a",
+   "outputs": [],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T16:57:37.150730Z",
+     "start_time": "2024-11-26T16:57:37.142159Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_merged.to_csv('addresses-notebook.csv', index=False)",
+   "id": "31ba76c8",
+   "outputs": [],
+   "execution_count": 36
   }
  ],
  "metadata": {
